name:                photon
version:             0.1
synopsis:            Scene engine
description:         "photon" is a realtime scene engine designed to be
                     simple to use, powerful and flexible. It’s designed as a
                     core package – the one you’ll use – and several backends
                     that implements the core features. Just pick a backend and
                     you’re good to go!

                     The "photon" package exposes several *core* concepts
                     you’ll have to be familiar with. The power of **photon**
                     is the fact the *core* package is quite lightweight so
                     that you don’t have that much to know.

                     Up to now, the engine is designed to be very simple, with
                     no textures no shading customization. I’ll enhance all
                     that as I get better projects to work on! :)
homepage:            https://github.com/phaazon/photon
license:             BSD3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
category:            Graphics

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -W -Wall -O2

  exposed-modules:     Photon.Control.Monad
                     , Photon.Core.BoundingVolume
                     , Photon.Core.Color
                     , Photon.Core.Entity
                     , Photon.Core.Light
                     , Photon.Core.Mesh
                     , Photon.Core.Model
                     , Photon.Core.Normal
                     , Photon.Core.Position
                     , Photon.Core.PostFX
                     , Photon.Core.Projection
                     , Photon.Core.Renderer
                     , Photon.Core.Scene
                     , Photon.Core.VGroup
                     , Photon.Core.Vertex
                     , Photon.Core.UV
                     , Photon.Resource.Available
                     , Photon.Resource.Loader
                     , Photon.Utils.Directory
                     , Photon.Utils.Log
                     , Photon.Utils.TimePoint

  default-extensions:  DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TemplateHaskell

  other-extensions:    ConstraintKinds
                     , OverloadedStrings
                     , RankNTypes
                     , TypeFamilies

  build-depends:       base          >= 4.6   && < 4.8
                     , time          >= 1.4   && < 1.5
                     , directory     >= 1.2   && < 1.3
                     , mtl           >= 2.2.1 && < 2.3
                     , transformers  >= 0.3   && < 0.5
                     , vector        >= 0.10  && < 0.11
                     , bytestring    >= 0.10  && < 0.11
                     , split         >= 0.2   && < 0.3
                     , containers    >= 0.5   && < 0.6
                     , linear        >= 1.10  && < 1.11
                     , lens          >= 4.2   && < 4.5
                     , aeson         >= 0.8   && < 0.9
                     , scientific    >= 0.3   && < 0.4
                     , nats          >= 0.1   && < 0.3
                     , monad-journal >= 0.2   && < 0.6
                     , filepath      >= 1.3   && < 1.4

  default-language:    Haskell2010
