name:                photon
version:             0.1
synopsis:            Realtime 3D engine
description:         "photon" is a realtime 3D engine designed to be
                     simple to use, powerful and flexible.
homepage:            https://github.com/phaazon/photon
license:             BSD3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
category:            Graphics

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -W -Wall -debug

  hs-source-dirs:      src

  exposed-modules:     Photon.Control.Monad
                     , Photon.Core.BoundingVolume
                     , Photon.Core.Color
                     , Photon.Core.Entity
                     , Photon.Core.Light
                     , Photon.Core.Loader
                     , Photon.Core.Material
                     , Photon.Core.Mesh
                     , Photon.Core.Normal
                     , Photon.Core.Position
                     , Photon.Core.PostFX
                     , Photon.Core.Projection
                     , Photon.Core.Texture
                     , Photon.Core.VGroup
                     , Photon.Core.Vertex
                     , Photon.Core.UV
                     , Photon.Interface.Command
                     , Photon.Interface.Event
                     , Photon.Interface.Run
                     , Photon.Interface.Shaders
                     , Photon.Interface.PostFX
                     , Photon.Render.Camera
                     , Photon.Render.Light
                     , Photon.Render.Material
                     , Photon.Render.Mesh
                     , Photon.Render.PostFX
                     , Photon.Render.Shader
                     , Photon.Render.Texture
                     , Photon.Utils.Directory
                     , Photon.Utils.FreeList
                     , Photon.Utils.Log
                     , Photon.Utils.TimePoint

  other-modules:       Photon.Render.GL.Buffer
                     , Photon.Render.GL.Entity
                     , Photon.Render.GL.Framebuffer
                     , Photon.Render.GL.GLObject
                     , Photon.Render.GL.Log
                     , Photon.Render.GL.Offscreen
                     , Photon.Render.GL.Primitive
                     , Photon.Render.GL.Renderbuffer
                     , Photon.Render.GL.Shader
                     , Photon.Render.GL.Texture
                     , Photon.Render.GL.VertexArray

  default-extensions:  DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , TemplateHaskell

  other-extensions:    ConstraintKinds
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies

  build-depends:       base          >= 4.6   && < 4.8
                     , time          >= 1.4   && < 1.5
                     , directory     >= 1.2   && < 1.3
                     , mtl           >= 2.2.1 && < 2.3
                     , transformers  >= 0.3   && < 0.5
                     , free          >= 4.10  && < 4.11
                     , vector        >= 0.10  && < 0.11
                     , bytestring    >= 0.10  && < 0.11
                     , split         >= 0.2   && < 0.3
                     , containers    >= 0.5   && < 0.6
                     , linear        >= 1.10  && < 1.16
                     , lens          >= 4.2   && < 4.5
                     , either        >= 4.3   && < 4.4
                     , aeson         >= 0.8   && < 0.9
                     , scientific    >= 0.3   && < 0.4
                     , nats          >= 0.1   && < 0.3
                     , semigroups    >= 0.16  && < 0.17
                     , monad-journal >= 0.2   && < 0.6
                     , filepath      >= 1.3   && < 1.4
                     , JuicyPixels   >= 3.1   && < 3.2
                     , OpenGLRaw     >= 4.4   && < 4.5
                     , GLFW-b        >= 1.4   && < 1.5
                     , filepath      >= 0.1   && < 1.4
                     , stm           >= 2.4   && < 2.5

  default-language:    Haskell2010
