name:                quaazar
version:             0.1
synopsis:            Realtime 3D engine
description:         "quaazar" is a realtime 3D engine designed to be
                     simple to use, powerful and flexible.
homepage:            https://github.com/phaazon/quaazar
bug-reports:         https://github.com/phaazon/quaazar/issues
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
category:            Graphics

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -O3 -W -Wall -funbox-strict-fields

  ghc-prof-options:    -prof -fprof-auto -rtsopts

  hs-source-dirs:      src

  exposed-modules:     Quaazar
                     , Quaazar.Control
                     , Quaazar.Control.Monad
                     , Quaazar.Core
                     , Quaazar.Core.Albedo
                     , Quaazar.Core.BoundingVolume
                     , Quaazar.Core.Color
                     , Quaazar.Core.Hierarchy
                     , Quaazar.Core.Light
                     , Quaazar.Core.Loader
                     , Quaazar.Core.Mesh
                     , Quaazar.Core.Normal
                     , Quaazar.Core.Position
                     , Quaazar.Core.Projection
                     , Quaazar.Core.Resource
                     , Quaazar.Core.Transform
                     , Quaazar.Core.VGroup
                     , Quaazar.Core.Vertex
                     , Quaazar.Core.UV
                     , Quaazar.Event
                     , Quaazar.Render
                     , Quaazar.Render.Camera
                     , Quaazar.Render.Compositing
                     , Quaazar.Render.GL.Shader
                     , Quaazar.Render.GL.Texture
                     , Quaazar.Render.GLSL
                     , Quaazar.Render.Light
                     , Quaazar.Render.Mesh
                     , Quaazar.Render.RenderLayer
                     , Quaazar.Render.Renderer
                     , Quaazar.Render.Viewport
                     , Quaazar.Technics
                     , Quaazar.Technics.Compositing
                     , Quaazar.Technics.Lighting.Phong
                     , Quaazar.Utils
                     , Quaazar.Utils.Directory
                     , Quaazar.Utils.Log
                     , Quaazar.Utils.Scoped
                     , Quaazar.Utils.TimePoint

  other-modules:       Quaazar.Render.Lighting
                     , Quaazar.Render.GL.Buffer
                     , Quaazar.Render.GL.Framebuffer
                     , Quaazar.Render.GL.GLObject
                     , Quaazar.Render.GL.Log
                     , Quaazar.Render.GL.Offscreen
                     , Quaazar.Render.GL.Primitive
                     , Quaazar.Render.GL.Renderbuffer
                     , Quaazar.Render.GL.VertexArray
                     , Quaazar.Render.Transform

  default-extensions:  DefaultSignatures
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TemplateHaskell

  other-extensions:    BangPatterns
                     , ConstraintKinds
                     , OverloadedStrings
                     , RankNTypes
                     , TypeFamilies

  build-depends:       base              >= 4.6   && < 5.0
                     , directory         >= 1.2   && < 1.3
                     , mtl               >= 2.2.1 && < 2.3
                     , transformers      >= 0.4   && < 0.5
                     , transformers-base >= 0.4   && < 0.5
                     , monad-control     >= 1.0   && < 1.1
                     , vector            >= 0.10  && < 0.11
                     , bytestring        >= 0.10  && < 0.11
                     , linear            >= 1.10  && < 1.17
                     , lens              >= 4.2   && < 4.5
                     , either            >= 4.3   && < 4.4
                     , bifunctors        >= 4.2   && < 4.3
                     , aeson             >= 0.8   && < 0.9
                     , scientific        >= 0.3   && < 0.4
                     , nats              >= 0.1   && < 0.3
                     , semigroups        >= 0.16  && < 0.17
                     , monad-journal     >= 0.2   && < 0.8
                     , JuicyPixels       >= 3.1   && < 3.2
                     , OpenGLRaw         >= 2.1   && < 2.2
                     , GLFW-b            >= 1.4   && < 1.4.7
                     , filepath          >= 0.1   && < 1.4
                     , stm               >= 2.4   && < 2.5
                     , clock             >= 0.4   && < 0.5
                     , profunctors       >= 4.3   && < 4.5
                     , containers        >= 0.5   && < 0.6

  default-language:    Haskell2010

-- executable qzr-mat-sdbx
--   ghc-options:         -O3 -W -Wall -funbox-strict-fields
-- 
--   ghc-prof-options:    -prof -fprof-auto -rtsopts
-- 
--   hs-source-dirs:      sdk/material_sandbox/src
-- 
--   main-is:             Main.hs
-- 
--   default-extensions:  ScopedTypeVariables
-- 
--   build-depends:       base              >= 4.6   && < 5.0
--                      , mtl               >= 2.2.1 && < 2.3
--                      , fsnotify          >= 0.1   && < 0.2
--                      , quaazar           >= 0.1   && < 0.2
--                      , either            >= 4.3   && < 4.4
--                      , monad-journal     >= 0.2   && < 0.8
-- 
--   default-language:    Haskell2010
