name:                quaazar
version:             0.1
synopsis:            Realtime 3D engine
description:         "quaazar" is a realtime 3D engine designed to be
                     simple to use, powerful and flexible.
homepage:            https://github.com/phaazon/quaazar
bug-reports:         https://github.com/phaazon/quaazar/issues
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
category:            Graphics

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -O3 -W -Wall -funbox-strict-fields

  ghc-prof-options:    -prof -fprof-auto -rtsopts

  hs-source-dirs:      src

  exposed-modules:     Quaazar
                     , Quaazar.Animation.Curve
                     , Quaazar.Animation.Interpolation
                     , Quaazar.Animation.Key
                     , Quaazar.Control
                     , Quaazar.Control.Constraint
                     , Quaazar.Control.Monad
                     , Quaazar.Control.Trans
                     , Quaazar.Geometry
                     , Quaazar.Geometry.Mesh
                     , Quaazar.Geometry.Normal
                     , Quaazar.Geometry.Position
                     , Quaazar.Geometry.VGroup
                     , Quaazar.Geometry.Vertex
                     , Quaazar.Geometry.UV
                     , Quaazar.Lighting
                     , Quaazar.Lighting.Light
                     , Quaazar.Lighting.Shadow
                     , Quaazar.Render
                     , Quaazar.Render.Camera
                     , Quaazar.Render.Compositing
                     , Quaazar.Render.GL.Shader
                     , Quaazar.Render.GL.Texture
                     , Quaazar.Render.Semantics
                     , Quaazar.Render.Light
                     , Quaazar.Render.Mesh
                     , Quaazar.Render.Projection
                     , Quaazar.Render.RenderLayer
                     , Quaazar.Render.Renderer
                     , Quaazar.Render.Viewport
                     , Quaazar.Scene
                     , Quaazar.Scene.BoundingVolume
                     , Quaazar.Scene.Camera
                     , Quaazar.Scene.Color
                     , Quaazar.Scene.Hierarchy
                     , Quaazar.Scene.Model
                     , Quaazar.Scene.Transform
                     , Quaazar.System
                     , Quaazar.System.Event
                     , Quaazar.System.Loader
                     , Quaazar.System.Managers
                     , Quaazar.System.Resource
                     , Quaazar.System.Windowing
                     , Quaazar.Technics
                     , Quaazar.Technics.Lighting.Phong
                     , Quaazar.Utils
                     , Quaazar.Utils.Directory
                     , Quaazar.Utils.Log
                     , Quaazar.Utils.Scoped
                     , Quaazar.Utils.TimePoint

  other-modules:       Quaazar.Render.Lighting
                     , Quaazar.Render.GL.Buffer
                     , Quaazar.Render.GL.Framebuffer
                     , Quaazar.Render.GL.GLObject
                     , Quaazar.Render.GL.Log
                     , Quaazar.Render.GL.Offscreen
                     , Quaazar.Render.GL.Primitive
                     , Quaazar.Render.GL.Renderbuffer
                     , Quaazar.Render.GL.VertexArray
                     , Quaazar.Render.Transform

  default-extensions:  BangPatterns
                     , DefaultSignatures
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies

  other-extensions:    ConstraintKinds
                     , ExistentialQuantification
                     , OverloadedStrings
                     , RankNTypes
                     , TypeFamilies

  build-depends:       base              >= 4.6   && < 5.0
                     , directory         >= 1.2   && < 1.3
                     , mtl               >= 2.2.1 && < 2.3
                     , transformers      >= 0.4   && < 0.5
                     , transformers-base >= 0.4   && < 0.5
                     , monad-control     >= 1.0   && < 1.1
                     , vector            >= 0.10  && < 0.11
                     , bytestring        >= 0.10  && < 0.11
                     , linear            >= 1.18  && < 1.19
                     , lens              >= 4.2   && < 4.10
                     , either            >= 4.3   && < 4.4
                     , bifunctors        >= 4.2   && < 4.3
                     , aeson             >= 0.8   && < 0.9
                     , scientific        >= 0.3   && < 0.4
                     , nats              >= 0.1   && < 1.1
                     , semigroups        >= 0.16  && < 0.17
                     , monad-journal     >= 0.2   && < 0.8
                     , JuicyPixels       >= 3.1   && < 3.3
                     , OpenGLRaw         >= 2.1   && < 2.2
                     , GLFW-b            >= 1.4   && < 1.4.7
                     , filepath          >= 0.1   && < 1.5
                     , stm               >= 2.4   && < 2.5
                     , clock             >= 0.4   && < 0.5
                     , profunctors       >= 4.3   && < 4.5
                     , containers        >= 0.5   && < 0.6
                     , future            >= 0.1   && < 0.2

  default-language:    Haskell2010

executable qzr
  ghc-options:         -O3 -W -Wall -funbox-strict-fields

  ghc-prof-options:    -prof -fprof-auto -rtsopts

  hs-source-dirs:      sdk/qzr/src

  main-is:             Main.hs

  default-extensions:  ScopedTypeVariables

  build-depends:       base              >= 4.6   && < 5.0
                     , mtl               >= 2.2.1 && < 2.3
                     , quaazar           >= 0.1   && < 0.2
                     , either            >= 4.3   && < 4.4
                     , monad-journal     >= 0.2   && < 0.8
                     , filepath          >= 1.3   && < 1.4
                     , directory         >= 1.2   && < 1.3
                     , future            >= 0.1   && < 0.2

  default-language:    Haskell2010

-- executable qzr-mat-sdbx
--   ghc-options:         -O3 -W -Wall -funbox-strict-fields
--
--   ghc-prof-options:    -prof -fprof-auto -rtsopts
--
--   hs-source-dirs:      sdk/material_sandbox/src
--
--   main-is:             Main.hs
--
--   default-extensions:  ScopedTypeVariables
--
--   build-depends:       base              >= 4.6   && < 5.0
--                      , mtl               >= 2.2.1 && < 2.3
--                      , fsnotify          >= 0.1   && < 0.2
--                      , quaazar           >= 0.1   && < 0.2
--                      , either            >= 4.3   && < 4.4
--                      , monad-journal     >= 0.2   && < 0.8
--
--   default-language:    Haskell2010
